--- a/views/animals.erb
+++ b/views/animals.erb
@@ -1,1 +1,11 @@
-Animals
+<li>
+  <% @animals.each do |animal| %>
+    <div class= "container">
+      <p>Name: <%= animal.name %></p>
+      <p>Type: <%= animal.type %></p>
+      <p>Adoptable: <%= animal.adoptable %></p>
+      <p>Admission date: <%= animal.admission_date %></p>
+      <img src = "<%= animal.photo_url %>"/>
+  </div>
+  <% end %>
+</li>
