--- a/views/animals.erb
+++ b/views/animals.erb
@@ -3,7 +3,13 @@
     <div class= "container">
       <p>Name: <%= animal.name %></p>
       <p>Type: <%= animal.type %></p>
-      <p>Adoptable: <%= animal.adoptable %></p>
+      <p>Adoptable:
+        <% if animal.adoptable == "t" %>
+          <%= "Yes" %>
+        <% else %>
+          <%= "No" %>
+        <% end %>
+      </p>
       <p>Admission date: <%= animal.admission_date %></p>
       <img src = "<%= animal.photo_url %>"/>
   </div>
