Amended routes for greater clarity

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Animal Shelter</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
   </head>
   <body>
     <nav class="navbar">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/owners">Owners</a></li>
-        <li><a href="/animals">Animals</a></li>
+        <li><a href="/owners/index">Owners</a></li>
+        <li><a href="/animals/index">Animals</a></li>
       </ul>
     </nav>
     <div class = container-main>
