User functionality is working, login, logout

--- a/views/animals/edit.erb
+++ b/views/animals/edit.erb
@@ -14,5 +14,5 @@
   <label for="admission-date-field">Admission date:</label>
   <input type="number" name="admission_date" id="admission-date-field" value="<%= @animal.admission_date() %>"/>
 
-  <input type='submit' value="Edit Animal">
+  <input type='submit' value="Edit animal">
 </form>
