--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,8 +14,9 @@
         <% if session[:id] == nil %>
           <li><a href="/sessions/login">Log in</a></li>
         <% else %>
-          <li>Currently logged in as <%= session[:name] %></li>
           <li><a href="/sessions/logout">Log out</a></li>
+          <li><a href="/animals/new">Add new animal</a></li>
+          <li>Currently logged in as <%= session[:name] %></li>
         <% end %>
       </ul>
     </nav>
