--- a/views/animals/index.erb
+++ b/views/animals/index.erb
@@ -1,17 +1,15 @@
-<li>
-  <% @animals.each do |animal| %>
-    <div class= "container">
-      <p>Name: <%= animal.name %></p>
-      <p>Type: <%= animal.type %></p>
-      <p>Adoptable:
-        <% if animal.adoptable == "t" %>
-          <%= "Yes" %>
-        <% else %>
-          <%= "No" %>
-        <% end %>
-      </p>
-      <p>Admission date: <%= animal.admission_date %></p>
-      <img src = "<%= animal.photo_url %>"/>
-  </div>
-  <% end %>
-</li>
+<% @animals.each do |animal| %>
+  <div class= "container">
+    <p>Name: <%= animal.name %></p>
+    <p>Type: <%= animal.type %></p>
+    <p>Adoptable:
+      <% if animal.adoptable == "t" %>
+        <%= "Yes" %>
+      <% else %>
+        <%= "No" %>
+      <% end %>
+    </p>
+    <p>Admission date: <%= animal.admission_date %></p>
+    <p><a href="/animals/<%= animal.id %>"><img src = "<%= animal.photo_url %>"/></a></p>
+</div>
+<% end %>
