--- a/public/style.css
+++ b/public/style.css
@@ -31,6 +31,10 @@ li {
 
 .container img {
   border: solid 3px black;
+  width: auto;
+  margin-left: 20px;
+  padding: auto;
+  margin: auto;
 }
 
 .navbar ul li {
@@ -45,15 +49,57 @@ li {
 }
 
 a:link    {
-  text-decoration:  none;
-  font-weight:      bold;
+  text-decoration: none;
+  color: white;
   }
 
 a:visited {
   text-decoration: none;
-  font-weight: bold;
+  color: white;
   }
 
 .nav-link {
-  background-color: lightsteelblue;
+  background-color: #4CAF50;
+}
+
+.nav-link:hover {
+  background-color: #45a049;
+}
+
+input, select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+#delete-button {
+  background-color: red;
+  width: 300px;
+  margin-left:28px;
+}
+
+#edit-button {
+  background-color: #4CAF50;
+  width: 300px;
+  margin-left:28px;
+  margin-top: 20px;
 }
