--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,14 +9,14 @@
   <body>
     <nav class="navbar">
       <ul>
-        <li><img class="logo" src="https://groundsandhoundscoffee.com/wp-content/uploads/2014/03/pet-refuge-logo.png"></li>
-        <li class="nav-link"><a href="/owners/index">All owners</a></li>
-        <li class="nav-link"><a href="/animals/index">All animals</a></li>
+        <a href="/animals/index"><li><img class="logo" src="https://groundsandhoundscoffee.com/wp-content/uploads/2014/03/pet-refuge-logo.png"></li></a>
+        <a href="/owners/index"><li class="nav-link">All owners</li></a>
+        <a href="/animals/index"><li class="nav-link">All animals</li></a>
         <% if session[:id] == nil %>
-          <li class="nav-link"><a href="/sessions/login">Log in</a></li>
+          <a href="/sessions/login"><li class="nav-link">Log in</li></a>
         <% else %>
-          <li class="nav-link"><a href="/animals/new">Add new animal</a></li>
-          <li class="nav-link"><a href="/sessions/logout">Log out</a></li>
+          <a href="/animals/new"><li class="nav-link">Add new animal</li></a>
+          <a href="/sessions/logout"><li class="nav-link">Log out</li></a>
           <li>Currently logged in as <%= session[:name] %></li>
         <% end %>
       </ul>
