--- a/views/users/index.erb
+++ b/views/users/index.erb
@@ -1,10 +1,10 @@
 <form method="post" action="/sessions">
 
   <label for="name-field">Name:</label>
-  <input type="text" name="name" id="name-field"value="name"/>
+  <input type="text" name="name" id="name-field"value=""/>
 
   <label for="password-field">Password:</label>
-  <input type="text" name="password" id="password-field" value="password"/>
+  <input type="password" name="password" id="password-field" value=""/>
 
   <input type='submit' value="Log in">
 
