Fixed animals update page

--- a/views/animals/show.erb
+++ b/views/animals/show.erb
@@ -16,7 +16,7 @@
     <!-- <form action="" method="post">
       <input type='submit' value="Adoptable?">
     </form> -->
-    <form action="/animals/<%= @animal.id %>/edit" method="post">
+    <form action="/animals/<%= @animal.id %>/edit" method="get">
       <input id ="edit-button" type='submit' value="Edit animal's details">
     </form>
     <form action="/animals/<%= @animal.id %>/delete" method="post">
