--- a/views/animals/edit.erb
+++ b/views/animals/edit.erb
@@ -17,5 +17,8 @@
   <label for="photo-url-field">Photo link:</label>
   <input type="text" name="photo_url" id="photo-url-field" value="<%= @animal.photo_url %>"/>
 
+  <label for="owner-id-field">Owner:</label>
+  <input type="text" name="owner_id" id="owner-id-field" value="<%= @animal.owner_id %>"/>
+
   <input type='submit' value="Edit animal">
 </form>
