Fixed edit function, was not saving owner to database properly

--- a/views/animals/edit.erb
+++ b/views/animals/edit.erb
@@ -18,9 +18,9 @@
   <input type="text" name="photo_url" id="photo-url-field" value="<%= @animal.photo_url %>"/>
 
   <label for="owner-field">Owner:</label>
-  <select name="owner" id="owner-field">
+  <select name="owner_id" id="owner-field">
     <% @owners.each do |owner| %>
-      <option value="" <%= "selected" if @animal.owner_id == owner.id %>><%= owner.first_name %> <%= owner.last_name %></option>
+      <option value="<%= owner.id %>" <%= "selected" if @animal.owner_id == owner.id %>><%= owner.first_name %> <%= owner.last_name %></option>
     <% end %>
   </select>
 
