--- a/views/owners/show.erb
+++ b/views/owners/show.erb
@@ -13,3 +13,19 @@
       </form>
     <% end %>
 </div>
+
+<% @animals.each do |animal| %>
+  <div class= "container">
+    <p>Name: <%= animal.name %></p>
+    <p>Type: <%= animal.type %></p>
+    <p>Adoptable:
+      <% if animal.adoptable == "t" %>
+        <%= "Yes" %>
+      <% else %>
+        <%= "No" %>
+      <% end %>
+    </p>
+    <p>Admission date: <%= animal.admission_date %></p>
+    <p><a href="/animals/<%= animal.id %>"><img src = "<%= animal.photo_url %>"/></a></p>
+</div>
+<% end %>
