Added pages for adoptable and unadoptable animals

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,13 +16,13 @@
         <% else %>
 
           <div class="dropdown">
-            <button class="dropbtn">Animals
+            <button class="dropbtn">View animals
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
               <a href="/animals/index"><li class="nav-link">All animals</li></a>
-              <a href="#">Ready for adoption</a>
-              <a href="#">Not ready yet</a>
+              <a href="/animals/adoptable"><li class = "nav-link">Ready for adoption</li></a>
+              <a href="/animals/unadoptable"><li class = "nav-link">Not ready yet</li></a>
             </div>
           </div>
 
