--- a/public/style.css
+++ b/public/style.css
@@ -108,7 +108,6 @@ input[type=submit]:hover {
 
 .navbar {
     overflow: hidden;
-    background-color: #333;
     font-family: Arial;
 }
 
@@ -117,13 +116,15 @@ input[type=submit]:hover {
     font-size: 16px;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px 10px;
     text-decoration: none;
 }
 
 .dropdown {
     float: left;
     overflow: hidden;
+    padding: 10px;
+    margin: 10px;
 }
 
 .dropdown .dropbtn {
@@ -131,8 +132,9 @@ input[type=submit]:hover {
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
-    background-color: inherit;
+    padding: 10px 10px;
+    background-color: #4CAF50;
+    border-radius: 10px;
 }
 
 .dropdown-content {
@@ -142,11 +144,12 @@ input[type=submit]:hover {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    border-radius: 10px;
 }
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
