--- a/views/animals/show.erb
+++ b/views/animals/show.erb
@@ -11,9 +11,8 @@
   <p>Admission date: <%= @animal.admission_date %></p>
   <img src = "<%= @animal.photo_url %>"/>
   <% if session[:name] == "administrator" %>
-    <!-- <p><a href="/animals/<%= @animal.id %>/edit">Edit all details</a></p> -->
     <!-- Button to toggle adoptable -->
-    <!-- <form action="" method="post">
+    <!-- <form action="<%= @animal.adoptable %> = <%= !@animal.adoptable %>" method="post">
       <input type='submit' value="Adoptable?">
     </form> -->
     <form action="/animals/<%= @animal.id %>/edit" method="get">
