--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Animal Shelter</title>
+    <title>Pet Refuge</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/61386-200.png" />
   </head>
@@ -32,7 +32,7 @@
           <li>Currently logged in as <%= session[:name] %></li>
 
           <form class="submit" method = "get" action = "/search">
-            <input type="text" name="search_input" placeholder="Search by animal name or type"/>
+            <input type="text" name="search_input" placeholder="Search by an animal or owner field"/>
             <input type="submit" value="Search">
           </form>
 
