--- a/public/style.css
+++ b/public/style.css
@@ -11,11 +11,11 @@ img {
 
 .container {
   border: solid 1px black;
-  margin: 0 1% 2% 1%;
-  padding: 0 1% 2% 0;
+  margin: 0 0 2% 3.7%;
   display: inline-block;
   width: 28%;
   background-color: lightsteelblue;
+  border-radius: 10px;
 }
 
 li {
@@ -35,9 +35,7 @@ li {
 .container img {
   border: solid 3px black;
   width: auto;
-  margin-left: 20px;
-  padding: auto;
-  margin: auto;
+  max-width: 90%;
 }
 
 .navbar ul li {
@@ -168,3 +166,66 @@ input[type=submit]:hover {
   border-radius: 10px;
   margin: 20px;
 }
+.submit {
+  margin-right: 40px;
+}
+
+/*background*/
+
+/*body {
+	width: 100wh;
+	height: 90vh;
+	color: #fff;
+	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+h1,
+h6 {
+	font-family: 'Open Sans';
+	font-weight: 300;
+	text-align: center;
+	position: absolute;
+	top: 45%;
+	right: 0;
+	left: 0;
+}*/
